profilelist1exp/unpackaged/objects/Demand_Generation_Events__c.object
<CustomObject>
    <description>Quarterly and Yearly business planning for Partner Business Plan - Marketing initiative, Rebates Funded heads etc (Account Plan for Partner)</description>
    <fields>
        <fullName>Est_Cost_Currency__c</fullName>
        <label>Est. Cost (Currency)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incentive__c</fullName>
        <label>Incentive</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <label>Objective</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Business_Enablement__c</fullName>
        <label>Partner Business Enablement</label>
        <referenceTo>Partner_Business_Enablement__c</referenceTo>
        <relationshipName>Demand_Generation_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Timeframe__c</fullName>
        <label>Timeframe</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Events</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EVID-{00000000}</displayFormat>
        <label>Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>